refactor!: remove unnecessary `javafx.graphics` dependency and update configurations accordingly