@@ -1,4 +1,5 @@
 val javafxVersion = "25"
+
 plugins {
     application
     id("org.openjfx.javafxplugin") version "0.1.0"
@@ -6,7 +7,7 @@ plugins {
 
 javafx {
     version = javafxVersion
-    modules = listOf("javafx.controls", "javafx.graphics")
+    modules = listOf("javafx.controls")
 }
 
 application {
@@ -23,4 +24,5 @@ tasks.named<JavaExec>("run") {
     notCompatibleWithConfigurationCache(
         "avaExec run wires JavaFX runtime and touches disallowed types under CC."
     )
+    jvmArgs("--enable-native-access=javafx.graphics")
 }
